Update: CKEditor, Fix: Navigation mobile swipe hide

--- a/client/src/app/modules/base-module/header-component/header.component.scss
+++ b/client/src/app/modules/base-module/header-component/header.component.scss
@@ -39,12 +39,4 @@
 			}
 		}
 	}
-
-	.search {
-		height: calc(#{$headerHeight} - 12px);
-		max-height: calc(#{$headerHeight} - 12px);
-		box-sizing: border-box;
-		background: $sideBG;
-		box-shadow: $boxShadow inset;
-	}
 }
